@@ -1,3 +1,4 @@
+ - Save debug info from primal and dual (plotslab.m)
  - Fix bug in progress bar
  - Add missing include file in Components.h (kakr)
  - New function dolfin_end(const char* msg, ...)
